objects/PMC_DH_ModalReasonList__mdt.object
<CustomObject>
    <fields>
        <fullName>PMC_DH_Custom_Label__c</fullName>
        <label>PMC DH Custom Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_Position__c</fullName>
        <label>Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_DH_Type__c</fullName>
        <label>Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>PMC_DH_ModalReasonList</label>
    <listViews>
        <fullName>All_Records</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>IsProtected</columns>
        <columns>PMC_DH_Custom_Label__c</columns>
        <columns>PMC_DH_Position__c</columns>
        <columns>PMC_DH_Type__c</columns>
        <columns>PMC_DH_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>PMC_DH_ModalReasonLists</pluralLabel>
</CustomObject>